# ProgrammingLanguages-TU-Wien-SS16

calculator/: build.gradle
calculator/gradle/wrapper/: gradle-wrapper.properties
calculator/src/main/antlr/at/tuwien/progspr16/calculator/grammar/: Calculator.g4
calculator/src/main/java/at/tuwien/progspr16/calculator/interpreter/: Calculator.java  CalculatorInterpretVisitor.java  Main.java  ParseUtils.java
calculator/src/main/scala/at/tuwien/progspr16/calculator/interpreter/: Calculator.scala  CalculatorInterpretVisitor.scala  Main.scala  ParseUtils.scala
calculator/src/test/scala/at/tuwien/progspr16/calculator/interpreter/: CalculatorTest.scala
ide/: README.md  ide.cabal  stack.yaml
ide/examples/: max_three.lang  sim_obj.lang  undeclared_props.lang  unused_props.lang
ide/src/: Lexer.hs  Main.hs  Parser.hs  Renderer.hs  UndeclaredPropInspection.hs  UnusedPropInspection.hs
interpreter/: .gitignore  Interpreter.g4  Interpreter.py  InterpreterLexer.py  InterpreterListener.py  InterpreterParser.py  InterpreterVisitor.py  Makefile  MyVisitor.py  README.md  ex1-assignment.ip  ex1.ip  ex2-assignment.ip  init.sh  run_tests.sh  test10_money_transfer.lang  test2_simple_assignment.lang  test2_syscall.lang  test3_simple_return_statement.lang  test4_guard_statement.lang  test5_print_max.lang  test6_call_with_arguments.lang  test7_refer_outside_block.lang  test8_recursive_call.lang  test9_prop_list.lang
