name:                ide
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ide#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable ide
  ghc-options:         -threaded -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:
    Lexer,
    Parser,
    Renderer,
    UnusedPropInspection,
    UndeclaredPropInspection
  build-depends:       base >= 4.7 && < 5,
                       brick >= 0.8,
                       parsec,
                       vty,
                       microlens,
                       microlens-th,
                       text,
                       split >= 0.2.3.1
